# circle

./: .gitignore  .gitmodules  CMakeLists.txt  circle.cmake  circle.ld
addon/: CMakeLists.txt
addon/OneWire/: ds18x20.cpp
addon/Properties/: propertiesfatfsfile.h  propertiesfile.h
addon/SDCard/: CMakeLists.txt
addon/SDCard/sample/: kernel.cpp
addon/dio/sample/: kernel.cpp
addon/display/sample/hd44780/: kernel.cpp
addon/display/sample/st7789/: kernel.cpp
addon/fatfs/: CMakeLists.txt
addon/fatfs/sample/: CMakeLists.txt  kernel.cpp
addon/gpio/sample/rtkgpio/: kernel.cpp
addon/linux/: bug.cpp  kthread.cpp  printk.cpp  sprintf.cpp
addon/lvgl/: lvgl.cpp
addon/microbit/: microbitclient.cpp  microbitclient.h
addon/profile/sample/: kernel.cpp  screentask.cpp
addon/sensor/sample/mcp300x/: kernel.cpp
addon/tftpfileserver/: tftpfatfsfileserver.h
addon/ugui/sample/: controlwindow.h  scopewindow.cpp
addon/wlan/: CMakeLists.txt  bcm4343.h  p9chan.cpp  p9cmd.cpp  p9util.cpp
addon/wlan/sample/hello_ap/: echoserver.cpp  kernel.cpp
addon/wlan/sample/hello_wlan/: CMakeLists.txt  kernel.cpp
include/: assert.h
include/circle/: macaddress.h  serial.h  time.h  timer.h  types.h
include/circle/fs/: partitionmanager.h
include/circle/net/: dhcpclient.h  httpclient.h  ipaddress.h  mqttclient.h  netsubsystem.h  ntpdaemon.h
include/circle/sched/: task.h
include/circle/usb/: usbdevice.h  usbdevicefactory.h  usbfunction.h  usbstring.h
lib/: CMakeLists.txt  assert.cpp  bcm54213.cpp  circle_string.cpp  debug.cpp  devicenameservice.cpp  exceptionhandler.cpp  exceptionhandler64.cpp  logger.cpp  serial.cpp  startup.S
lib/fs/: CMakeLists.txt
lib/fs/fat/: CMakeLists.txt
lib/input/: CMakeLists.txt
lib/net/: CMakeLists.txt  dhcpclient.cpp  httpdaemon.cpp  icmphandler.cpp  syslogdaemon.cpp
lib/sched/: CMakeLists.txt  scheduler.cpp  task.cpp
lib/usb/: CMakeLists.txt  usbbluetooth.cpp
sample/01-gpiosimple/: CMakeLists.txt
sample/03-screentext/: CMakeLists.txt  kernel.cpp
sample/06-ethernet/: kernel.cpp
sample/08-usbkeyboard/: kernel.cpp
sample/09-softserial/: CMakeLists.txt
sample/14-usbprinter/: kernel.cpp
sample/15-files/: kernel.cpp
sample/18-ntptime/: kernel.cpp
sample/19-tasks/: kernel.cpp  primetask.cpp
sample/20-tcpsimple/: kernel.cpp
sample/21-webserver/: webserver.cpp
sample/27-usbgamepad/: kernel.cpp
sample/28-touchscreen/: kernel.cpp
sample/31-webclient/: htmlscanner.h  kernel.cpp
sample/32-i2cshell/: i2cshell.h
sample/35-mqttclient/: mqttsampleclient.cpp
sample/37-showgamepad/: kernel.cpp
sample/38-bootloader/: httpbootserver.cpp
sample/39-umsdplugging/: kernel.cpp
test/screen-ansi-colors/: kernel.cpp
tools/touchscreen-calibrator/: kernel.cpp
